Replace wabt with rust tools

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,9 @@ parity-wasm = { version = "0.42", default-features = false }
 binaryen = "0.12"
 diff = "0.1"
 rand = "0.8"
-wabt = "0.10"
+wat = "1"
+wasmparser = "0.82"
+wasmprinter = "0.2"
 
 [features]
 default = ["std"]
