Replace wabt with rust tools (#5)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,9 @@ binaryen = "0.12"
 criterion = "0.3"
 diff = "0.1"
 rand = "0.8"
-wabt = "0.10"
+wat = "1"
+wasmparser = "0.82"
+wasmprinter = "0.2"
 
 [features]
 default = ["std"]
