--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -62,6 +62,11 @@ jobs:
           target: wasm32-unknown-unknown
           toolchain: ${{ matrix.toolchain }}
 
+      - name: Set git to use LF
+        run: |
+          git config --global core.autocrlf false
+          git config --global core.eol lf
+
       - uses: actions/checkout@v2
 
       - name: Cargo build
