--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,8 @@ lto = "fat"
 codegen-units = 1
 
 [dependencies]
-parity-wasm = { version = "0.42", default-features = false }
-wasmparser = "0.84"
+parity-wasm = { path = "../parity-wasm", default-features = false }
+wasmparser = { path = "../wasm-tools/crates/wasmparser" }
 
 [dev-dependencies]
 binaryen = "0.12"
