add gha to dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,4 +5,7 @@ updates:
     labels: []
     schedule:
       interval: "daily"
-
+  - package-ecosystem: github-actions
+    directory: '/'
+    schedule:
+      interval: daily
