--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ include = ["src/**/*", "LICENSE-*", "README.md"]
 [[bench]]
 name = "benches"
 harness = false
+path = "benches/benches.rs"
 
 [profile.bench]
 lto = "fat"
