--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,13 @@ rand = "0.8"
 wat = "1"
 wasmparser = "0.90"
 wasmprinter = "0.2"
+wasmi = "0.18"
+wasmi_core = "0.4"
 
 [features]
 default = ["std"]
 std = ["parity-wasm/std"]
 sign_ext = ["parity-wasm/sign_ext"]
+
+[lib]
+bench = false
