--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "wasm-instrument"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 rust-version = "1.56.1"
 authors = ["Parity Technologies <admin@parity.io>"]
@@ -32,8 +32,12 @@ rand = "0.8"
 wat = "1"
 wasmparser = "0.94"
 wasmprinter = "0.2"
+wasmi = "0.20"
 
 [features]
 default = ["std"]
 std = ["parity-wasm/std"]
 sign_ext = ["parity-wasm/sign_ext"]
+
+[lib]
+bench = false
